--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
               </li>
             </ul>
           </nav>
-          <p class="footer__copyright">© 2020. Max Power</p>
+          <p class="footer__copyright">© 2025 - BARmen</p>
       </footer>
 
     
